added timer manager

--- a/dp-1-SW-timers/main/CMakeLists.txt
+++ b/dp-1-SW-timers/main/CMakeLists.txt
@@ -1,2 +1,5 @@
-idf_component_register(SRCS "intro_timers.c"
+# idf_component_register(SRCS "intro_timers.c"
+#                     INCLUDE_DIRS ".")
+
+idf_component_register(SRCS "timer_manager.c"
                     INCLUDE_DIRS ".")
